--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,17 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+
     -->
+
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+   (function(){
+      emailjs.init("DWSCI3qaYK6a9UuIi");
+   })();
+    </script>
 </body>
 
 </html>
